--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -1,17 +1,74 @@
+a:link {
+  text-decoration: none;
+  color: white; }
+
+a:visited {
+  text-decoration: none;
+  color: white; }
+
+.menu_superior:hover {
+  background-color: #ebebeb;
+  color: black; }
+
 * {
   padding: 0px;
   margin: 0px; }
 
-.cabecera img {
-  width: 100%; }
+body {
+  background-color: #ebebeb; }
+
+header {
+  background-color: black; }
+
+nav {
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  display: flex;
+  align-items: center; }
+  nav ul {
+    width: 80%;
+    margin: 0px auto;
+    display: flex;
+    flex-direction: row; }
+    nav ul li {
+      height: 50px;
+      width: 20%;
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      list-style: none;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+
+header .cabecera {
+  width: 100%;
+  max-height: 150px; }
+
+.banner {
+  height: 250px;
+  width: 100%;
+  background-color: white; }
+
+main {
+  max-width: 900px;
+  margin: 0px auto; }
 
 .parrafo {
-  width: 80%; }
-  .parrafo .izquierda {
-    width: 60%;
-    float: left; }
-    .parrafo .izquierda img {
-      width: 38%;
-      float: left; }
+  width: 100%;
+  padding: 25px;
+  background-color: white; }
+
+.primer img {
+  width: 40%;
+  float: left;
+  margin-right: 25px; }
+
+.segundo img {
+  width: 40%;
+  float: right;
+  margin-left: 25px; }
 
 /*# sourceMappingURL=styles.css.map */
