--- a/public_html/scss/styles.scss
+++ b/public_html/scss/styles.scss
@@ -1,21 +1,92 @@
+// variables
+$font-stack:    Helvetica, sans-serif;
+$primary-color: #111;
+$back-color: #ebebeb;
+$b: black;
+$w: white;
+// seudoelementos
+a:link {
+    text-decoration: none;
+    color: $w;
+}
+a:visited {
+    text-decoration: none;
+    color: $w;
+}
+.menu_superior:hover {
+    background-color: $back-color;
+    color: $b;
+}
+
+// resto de elementos
 *{
     padding: 0px;
     margin: 0px;
 }
-.cabecera{
-    img{
-        width: 100%;
-    }
+body{
+    background-color: $back-color;
 }
-.parrafo{
-    width: 80%;
-    .izquierda{
-        width: 60%;
-        float: left;
-        img{
-            width: 38%;
-            float: left;
+header{
+    background-color: $b;
+}
+nav{
+    width: 100%;
+    height: 50px;
+    background-color: $b;
+    display: flex;
+    align-items: center;
+    ul{
+        width: 80%;
+        margin: 0px auto;
+        display: flex;
+        flex-direction: row;
+        li {
+            height: 50px;
+            width: 20%;
+            color: $w;
+            font-weight: bold;
+            text-decoration: none;
+            list-style: none;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     }
 }
+header{
+    .cabecera{
+        width: 100%;
+        max-height: 150px;
+    }
+}
+.banner{
+    height: 250px;
+    width: 100%;
+    background-color: $w;
+}
+main{
+    max-width: 900px;
+    margin: 0px auto;
 
+}
+.parrafo{
+    width: 100%;
+    padding: 25px;
+    background-color: $w;
+}
+
+.primer{
+    img{
+        width: 40%;
+        float:left;
+        margin-right: 25px;
+    }
+}
+.segundo{
+    img{
+        width: 40%;
+        float:right;
+        margin-left: 25px;
+    }
+}
