--- a/css/styles.css
+++ b/css/styles.css
@@ -124,4 +124,8 @@ footer {
           font-size: 0.7em;
           padding: 0px 5px; }
 
+.formulario.registro {
+  padding: 25px;
+  background-color: white; }
+
 /*# sourceMappingURL=styles.css.map */
